@@ -1,68 +1,47 @@
 # xue-gao-write-other-use
 采用分支的方式，手写框架，学习框架使用
-
-# jdk，javase基础
-基础知识，以及Java的相关扩展
-## use-jdk
-jdk 基础的使用
-## java_json
-json处理，fastjson，Jackson，gson
-## java_agent
-agent相关知识
-## web_container
-web容器相关，暂时没东西
-## https
-Java的https，spring的https
-## Arthas
-ali 的 Arthas
-
-# write
-手写框架相关
-## write_mybatis 分支
-mybatis-write 项目手写了一个简单的mybatis，可以用来学习
-## write_mybatis 分支
-mybatis-write 项目手写了一个简单的mybatis，可以用来学习
-## write_spring_mvc
-没东西
-
-# spring相关
-## spring_mybatis
-spring 整合 mybatis
-## spring-mybatis-plus
-spring 整合 mybatis-plus
-## spring-bean
-spring 启动流程探讨，主要是bean初始化
-## spring_event
-spring的通知机制，在spring生命周期会出现，以及可以自定义发送
-## spring-kafka
-spring整合kafka
-## spring-redis
-spring整合redis
-## spring_cicd
-cicd
-## spring_log
-logback
-## spring_sleuth
-链路追踪
-## spring_conditional
-按类型加载
-## spring_autoconfig
-自动配置
 ## spring_performance
 性能测试
 
-# springcloud相关
-## spring_micro_services
-spring的微服务相关
+# jvm
+## 启动参数
 
-# 前端开发 front_end_dev
-## front_end_dev_start 前端入门开始
-前端入门，不能自己写出一个好看的页面前，都在这里。
+# cpu
+## cpu占用率高，但是负载低
 
-其他的联系项目，全部新建一个项目去写，然后合并为一个文件
+## cpu占用率低，但是负载高
 
-# 其他的
-## deal_document
-处理文档，xml，pdf，word，excel，等等文本文件
-## deal_multimedia
-处理音频，视频，等等多媒体文件
+## cpu100%
+
+
+# 内存
+## oom
+
+
+# 硬盘
+
+
+# io
+
+# 启动火焰图
+
+
+
+# 实战问题
+## cpu 打满且频繁 full GC
+
+## jvm，springboot启动参数
+-Xms4G
+-Xmx4G
+-XX:MetaspaceSize=512m
+-XX:MaxMetaspaceSize=512m
+-XX:+UseG1GC
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:HeapDumpPath=/app/logs/
+-XX:+PrintGCDetails
+-XX:+PrintHeapAtGC
+-XX:+PrintGCDateStamps
+-XX:+PrintGCTimeStamps
+
+
+
